Fix follow us button alignement on mobile

--- a/src/modules/Common/containers/Container.module.css
+++ b/src/modules/Common/containers/Container.module.css
@@ -55,6 +55,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    gap: var(--mM);
 
     @media (--tabletSmall) {
       flex-direction: column;
